--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     
     <!-- 제이쿼리 라이브러리 연결 -->
-    <script src="/js/jquery-3.6.4.js"></script>
+    <script src="js/jquery-3.6.4.js"></script>
     <!-- 외부 js 파일 연결 -->
     <script src="js/popup.js"></script>
     <!-- 외부 css 파일 연결 -->
